fix(preloader): lower z-index

--- a/packages/manager/modules/preloader/src/style.css
+++ b/packages/manager/modules/preloader/src/style.css
@@ -5,7 +5,7 @@
   width: 100%;
   height: 100%;
   background-color: #fff;
-  z-index: 9999;
+  z-index: 1009;
   display: flex !important;
 }
 
